--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -65,7 +65,7 @@
     animation: shake 0.8s;
 }
 
-@media screen and (max-width: 48em){
+@media screen and (max-width: 768px){
     .pageContainer{
         text-align: center;
         margin: auto;
