--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -72,3 +72,10 @@
         width: 100%;
     }
 }
+
+@media screen and (max-width: 390px) {
+    .header-text span.header-text-span {
+        line-height: 60px;
+        font-size: 6.2rem;
+    }
+}
