--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -72,6 +72,24 @@
     animation: shake 0.8s;
 }
 
+.iframe-container {
+    background-color: white;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 @media screen and (max-width: 768px){
     .pageContainer{
         text-align: center;
@@ -92,5 +110,12 @@
 
     .subheader-short-text-span {  
         display: block;
+    }
+
+    .iframeMock{
+        background-color: white;
+        height: 200px;
+        width: 100%;
+        margin: auto;
     }
 }
