--- a/docs/stylesheets/main.css
+++ b/docs/stylesheets/main.css
@@ -52,6 +52,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    margin-top: 5px;
 }
 
 .mission-statement {
@@ -78,6 +79,7 @@
     width: 100%;
     overflow: hidden;
     padding-top: 56.25%;
+    margin-top: 15px;
 }
 
 .responsive-iframe {
@@ -110,12 +112,5 @@
 
     .subheader-short-text-span {  
         display: block;
-    }
-
-    .iframeMock{
-        background-color: white;
-        height: 200px;
-        width: 100%;
-        margin: auto;
     }
 }
